<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingTop="5dp"
        android:paddingLeft="14dp"
        android:paddingRight="5dp">

        <Button
            android:id="@+id/btn_fun"
            android:layout_width="8dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/function"
            style="@style/Widget.AppCompat.Button"
            android:foreground="?android:attr/selectableItemBackground"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/exit"
            style="@style/Widget.AppCompat.Button"
            android:foreground="?android:attr/selectableItemBackground"
            />




    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
        <!--
        <view class="androidx.appcompat.app.AlertController$RecycleListView"
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeMinTextSize="20sp"

            android:scrollbars="vertical"/>
        -->
        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            app:autoSizeMaxTextSize="60sp"
            app:autoSizeMinTextSize="20sp"
            app:autoSizeStepGranularity="5sp"
            app:autoSizeTextType="uniform" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btn_fen"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:text="@string/fun_fen"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_left"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:textSize="30sp"
                android:text="@string/fun_zuo"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:textSize="30sp"
                android:text="@string/num7"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:text="@string/num4"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:text="@string/num1"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_percent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:text="@string/fun_bai"
                android:textSize="30sp"
                android:typeface="sans"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btn_gen"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:text="@string/fun_gen"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_right"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:text="@string/fun_you"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:text="@string/num8"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:text="@string/num5"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:text="@string/num2"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:text="@string/num0"
                android:typeface="sans"
                android:textSize="30sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:textSize="30sp"
                android:text="@string/fun_del"
                android:typeface="sans"/>

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:text="@string/fun_chu"
                android:textSize="30sp"
                android:typeface="sans" />
            <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:text="@string/num9"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:text="@string/num6"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_color_daytime"
                android:textSize="30sp"
                android:text="@string/num3"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_point"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:text="@string/fun_dia"
                android:textSize="30sp"
                android:typeface="sans"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btn_del"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:text="@string/fun_sha"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:textSize="30sp"
                android:text="@string/fun_che"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:text="@string/fun_jan"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_daytime_fun"
                android:text="@string/fun_jia"
                android:textSize="30sp"
                android:typeface="sans"/>
            <Button
                android:id="@+id/btn_equal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/btn_daytime_fun"
                android:textSize="30sp"
                android:text="@string/fun_den"
                android:typeface="sans"/>
        </LinearLayout>



    </LinearLayout>



</LinearLayout>